# SIOPV-TFM-dev

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.es.md  README.md  WEBHOOK-TASK.md  coverage.json  pyproject.toml  test-context7.json  trivy-report-small.json
.claude/: handoff-2026-02-09.md  handoff-2026-02-10-session2.md  handoff-2026-02-10.md  settings.json
.claude/agents/: async-safety-auditor.md  best-practices-enforcer.md  circular-import-detector.md  code-implementer.md  code-reviewer.md  config-validator.md  dependency-scanner.md  hallucination-detector.md  hex-arch-remediator.md  import-resolver.md  integration-tracer.md  phase7-builder.md  phase8-builder.md  security-auditor.md  semantic-correctness-auditor.md  smoke-test-runner.md  test-generator.md  xai-explainer.md
.claude/docs/: errors-to-rules.md  siopv-phase7-8-context.md  verification-thresholds.md
.claude/hooks/: coverage-gate.sh  post-code.sh  pre-compact.sh  session-end.sh  session-start.sh
.claude/rules/: tech-stack.md
.claude/workflow/: briefing.md  compaction-log.md  pre-compact-brief-2026-03-16T09:57:37Z.md  pre-compact-brief-2026-03-16T11:38:52Z.md  pre-compact-brief-2026-03-17T01:41:33Z.md  pre-compact-brief-2026-03-17T01:56:47Z.md  pre-compact-brief-2026-03-17T03:04:05Z.md  pre-compact-brief-2026-03-17T03:05:27Z.md  pre-compact-brief-2026-03-17T08:08:47Z.md  pre-compact-brief-2026-03-17T08:18:31Z.md  remediation-claude-config-march16.md
.github/workflows/: ci.yml
.ignorar.old.supersede.backup/09-03-2026-planning-and-briefing-preparation-for-exploring-and-gathering-siopv/: 2026-03-09_16.02.58_full-conversation-transcript-march-9-planning-session.md  2026-03-09_compact-proof-briefing-siopv-comprehensive-audit-and-modernization.md  2026-03-09_comparison-report-new-dual-purpose-vs-old-005.md  2026-03-09_definitive-dual-purpose-record-merged-comprehensive.md  2026-03-09_dual-purpose-record-comprehensive-checklist-and-technical-reference.md
.ignorar.old.supersede.backup/AuditPrePhase7-11mar26.finished.supersede.old.backup/: orchestrator-input-brief.md  remediation-hardening-orchestrator-guidelines.md
.ignorar.old.supersede.backup/docs/: PHASE-0-REPORT-EN.md  PHASE-0-REPORT-ES.md  siopv-python-typing-audit-2026-02-11.md
.ignorar.old.supersede.backup/first-try-agent-persona-research-2026-03-09-right-before-compaction/: 001_claude-code-agent-persona-guardrails-behavioral-control.md  002_llm-agent-behavioral-control-guardrails-techniques.md  003_checkpoints-extracted-from-claude-code-report.md  004_checkpoints-extracted-from-llm-behavioral-report.md  005_dual-purpose-technical-record-and-checklist-for-agent-design.md  006_comprehensive-briefing-handoff-file-for-continuation-after-clear.md  today-2026-03-09-conversation.jsonl
.ignorar/production-reports/: 2026-02-10-orchestrator-constraint-research.md
.verify-16-03-2026/context7-cache/: BRIEFING.md  anthropic.md  chromadb.md  httpx.md  imblearn.md  jwt.md  langchain_core.md  langgraph.md  lime.md  numpy.md  openfga_sdk.md  optuna.md  pydantic.md  pydantic_settings.md  shap.md  sklearn.md  structlog.md  tenacity.md  typer.md  xgboost.md
.verify-16-03-2026/handoffs/: handoff-orchestrator.md  handoff-prewave-researcher.md  handoff-scanner-bpe-1.md  handoff-scanner-bpe-2.md  handoff-scanner-bpe-3.md  handoff-scanner-bpe-4.md  handoff-scanner-bpe-5.md  handoff-scanner-bpe-6b.md  handoff-scanner-bpe-7b.md  handoff-scanner-hallucination-1c.md  handoff-scanner-hallucination-2.md  handoff-scanner-hallucination-3.md  handoff-scanner-hallucination-4.md  handoff-scanner-hallucination-5.md  handoff-scanner-hallucination-6.md  handoff-scanner-security-1.md  (+7 more)
.verify-17-03-2026/: imports-raw.txt  imports-to-test.txt
docs/: webhook.md
models/: xgboost_risk_model.json  xgboost_risk_model.metadata.json
research-16march2026/: 01-skill-files-best-practices.md  02-directory-structure-config.md  03-claude-md-best-practices.md  04-hooks-and-settings.md  05-multi-agent-patterns.md  06-memory-and-context.md  audit-01-skills.md  audit-02-claudemd.md  audit-03-settings-hooks.md  audit-04-agents-structure.md  audit-05-memory-context.md
scripts/: create-small-trivy-report.py  setup-keycloak.py  setup-openfga-tuples.sh  setup.sh  smoke-tests.py  step4e-baseline-test.sh  train-xgboost.py  webhook-bridge.sh  webhook-smoke-test.py
(+527 files in other folders)
